--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -19,13 +19,13 @@
           <div>
             <!-- Header -->
             <div>
-              <h3>Sign in to our platform</h3>
+              <h3>Login to GPT Scrape</h3>
             </div>
             <!-- Form body -->
             <div>
               <form method="POST" action="">
                 <div>
-                  <label for="username">Your username</label>
+                  <label for="username">Username</label>
                   <input
                     type="text"
                     name="username"
@@ -35,7 +35,7 @@
                   />
                 </div>
                 <div>
-                  <label for="password">Your password</label>
+                  <label for="password">Password</label>
                   <input
                     type="password"
                     name="password"
@@ -44,7 +44,7 @@
                     required
                   />
                 </div>
-                <button type="submit" w>Sign in to your account</button>
+                <button type="submit" w>Login</button>
                 <div>
                   Not Registered?
                   <a href="/register">Sign up</a>
