--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,54 +3,105 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>GPT Scraper</title>
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <title>GPT Archive</title>
   </head>
-  <body>
+  <body
+    class="bg-neutral-800 text-white flex flex-col justify-between min-h-[125dvh]"
+  >
     <!--  Insert Modal  -->
-    <div onclick="toggleInsertModal()" id="modal-overlay"></div>
-    <div id="insert-modal">
-      <h3>Insert GPT Conversation</h3>
-      <form action="/insert" method="post">
+    <div
+      onclick="toggleInsertModal()"
+      id="modal-overlay"
+      class="fixed inset-0 bg-black/60 hidden"
+    ></div>
+    <div
+      id="insert-modal"
+      class="fixed z-20 w-[30rem] -translate-y-1/2 -translate-x-1/2 top-1/2 left-1/2 bg-neutral-700 rounded-xl px-10 pb-10 py-6 hidden"
+    >
+      <h3 class="text-center font-semibold text-xl mb-4">
+        Insert GPT Conversation
+      </h3>
+      <form class="flex flex-col gap-4" action="/insert" method="post">
         <div>
-          <input type="text" name="title" id="title" placeholder="Title" />
+          <input
+            type="text"
+            name="title"
+            id="title"
+            placeholder="Title"
+            class="bg-neutral-500 px-4 py-2 w-full outline-none rounded"
+          />
         </div>
         <div>
-          <input type="text" name="link" id="link" placeholder="Link" />
+          <input
+            type="text"
+            name="link"
+            id="link"
+            placeholder="Link"
+            class="bg-neutral-500 px-4 py-2 w-full outline-none rounded"
+          />
         </div>
         <div>
-          <button type="submit">Save</button>
+          <button
+            type="submit"
+            class="bg-neutral-900 hover:bg-neutral-950 px-4 py-2 rounded cursor-pointer w-full"
+          >
+            Save
+          </button>
         </div>
       </form>
     </div>
 
-    <div>
+    <div class="grid grid-cols-10 gap-4 h-screen">
       <!-- Sidebar -->
-      <div>
-        <button onclick="toggleInsertModal()" type="button">
+      <div class="col-span-3 overflow-auto bg-neutral-950/30 w-full p-4">
+        <button
+          onclick="toggleInsertModal()"
+          type="button"
+          class="cursor-pointer bg-neutral-900 hover:bg-neutral-950 px-4 py-2 rounded mb-10 text-lg"
+        >
           New Conversation
         </button>
         <ul class="flex flex-col gap-2">
           {% for curr_conv in conversations %}
-          <li>
-            <a href="/conversations/{{ curr_conv['conversation_id'] }}">
+          <li
+            class="cursor-pointer rounded {{'bg-neutral-600' if conversation and conversation['conversation_id'] == curr_conv['conversation_id'] else 'hover:bg-neutral-600'}} px-3 py-1 transition-all group flex justify-between items-center relative"
+          >
+            <a
+              class="w-full"
+              href="/conversations/{{ curr_conv['conversation_id'] }}"
+            >
               {{curr_conv['title']}}
             </a>
-            <button id="conv-action-btn-{{curr_conv['conversation_id']}}">
+            <button
+              id="conv-action-btn-{{curr_conv['conversation_id']}}"
+              class="hidden group-hover:block cursor-pointer rounded-full w-3 aspect-square font-bold conv-action-btn"
+            >
               :
             </button>
-            <div id="conv-action-modal-{{curr_conv['conversation_id']}}">
-              <ul>
-                <li>
-                  <button>Rename</button>
+            <div
+              id="conv-action-modal-{{curr_conv['conversation_id']}}"
+              class="absolute z-20 right-0 top-8 bg-neutral-900 hidden flex-col rounded p-1 conv-action-modal"
+            >
+              <ul class="flex flex-col gap-2">
+                <li class="hover:bg-neutral-800 py-2 px-4 rounded">
+                  <button class="cursor-pointer">Rename</button>
                 </li>
-                <li>
-                  <button>Delete</button>
+                <li class="hover:bg-neutral-800 py-2 px-4 rounded">
+                  <button class="cursor-pointer">Delete</button>
                 </li>
               </ul>
             </div>
             <div
               id="conv-action-modal-overlay-{{curr_conv['conversation_id']}}"
+              class="fixed inset-0 conv-action-modal-overlay hidden cursor-default"
             ></div>
           </li>
           {% endfor %}
@@ -58,11 +109,11 @@
       </div>
 
       <!-- Main content -->
-      <main>
+      <main class="col-span-7 lg:p-10 h-screen overflow-auto">
         {% if home %}
         <!-- Fallback text -->
-        <div>
-          <h4>GPT Scraper</h4>
+        <div class="flex flex-col gap-4 justify-center items-center h-full">
+          <h4 class="text-5xl font-semibold">GPT Archive</h4>
           <p>
             Select one conversation on the left side, or save new conversation.
           </p>
@@ -70,13 +121,19 @@
         {% else %}
 
         <!-- Content -->
-        <div>
+        <div
+          class="flex flex-col gap-10 justify-start items-center min-h-screen p-4 pb-20 w-full"
+        >
           {% for text in conversation['text'] %}
-          <section>
-            <div>{{text['user']}}</div>
+          <section class="flex justify-end w-full">
+            <div class="bg-neutral-900 rounded-2xl p-6 w-5/6">
+              {{text['user']}}
+            </div>
           </section>
-          <section>
-            <div>{{text['assistant']}}</div>
+          <section class="flex justify-start w-full">
+            <div class="bg-neutral-900 rounded-2xl p-6 w-5/6">
+              {{text['assistant']}}
+            </div>
           </section>
           {%endfor%}
         </div>
@@ -84,9 +141,9 @@
         {% endif %}
       </main>
     </div>
-    <footer>
-      <p>Copyright (c) 2025 Ahmad Wildan Putro Santoso</p>
+    <footer class="bg-neutral-950 p-10 text-center">
+      <p>Copyright (c) 2025 Ahmad Reza Adrian</p>
     </footer>
-    <script src="/data/script.js"></script>
+    <script src="/static/js/script.js"></script>
   </body>
 </html>
