--- a/src/templates/beranda.html
+++ b/src/templates/beranda.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GPTSniffer</title>
+    <title>GPTScraper</title>
     <link rel="icon" type="image/svg+xml" href="assets/Group16.svg" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link
@@ -36,14 +36,14 @@
             />
           </a>
           <button
-  id="showFormBtn"
-  class="bg-blue-500 text-white px-2 py-1 md:px-4 md:py-2 text-[9px] md:text-base col-end-7 rounded-3xl hover:bg-blue-600 flex items-center justify-center"
->
-  <span class="md:hidden text-sm">+</span>
-  <!-- Tampilkan hanya di mobile -->
-  <span class="hidden md:block">+ New Scrapper</span>
-  <!-- Tampilkan hanya di desktop -->
-</button>
+            id="showFormBtn"
+            class="bg-blue-500 text-white px-2 py-1 md:px-4 md:py-2 text-[9px] md:text-base col-end-7 rounded-3xl hover:bg-blue-600 flex items-center justify-center"
+          >
+            <span class="md:hidden text-sm">+</span>
+            <!-- Tampilkan hanya di mobile -->
+            <span class="hidden md:block">+ New Scrapper</span>
+            <!-- Tampilkan hanya di desktop -->
+          </button>
         </div>
 
         <div
@@ -112,7 +112,20 @@
           <div
             class="flex-1 overflow-auto p-4 md:p-6 w-full flex flex-col items-center space-y-4"
           >
-            {% for text in conversation['text'] %}
+            <div class="flex gap-4">
+              <a
+                class="hover:scale-105 transition-all px-4 py-2 rounded-lg {{'bg-blue-500 text-white' if is_lower != 1 else ''}}"
+                href="?lower=0"
+                >Original Text</a
+              >
+              <a
+                class="hover:scale-105 transition-all px-4 py-2 rounded-lg {{'bg-blue-500 text-white' if is_lower == 1 else ''}}"
+                href="?lower=1"
+                >Lowercased Text</a
+              >
+            </div>
+            {% set curr_text = conversation['lowercased_text'] if is_lower==1
+            else conversation['text']%} {% for text in curr_text %}
             <!-- User Chat -->
             <div
               class="flex items-start w-full max-w-[90%] md:max-w-[80%] self-end flex-row-reverse ml-auto"
@@ -124,7 +137,8 @@
                 class="bg-white rounded-[20px] p-3 md:p-4 max-w-[80%] md:max-w-[70%]"
               >
                 <p class="text-black text-xs md:text-sm font-medium leading-4">
-                  {{ text['user'] }}
+                  {% if is_lower == 0 %} {{ text['user']|safe }} {% else %}
+                  {{ text['user'] }} {% endif %}
                 </p>
               </div>
             </div>
@@ -140,7 +154,8 @@
                 class="bg-blue-300 rounded-[20px] p-3 md:p-4 max-w-[80%] md:max-w-[70%]"
               >
                 <p class="text-black text-xs md:text-sm font-medium leading-4">
-                  {{ text['assistant'] }}
+                  {% if is_lower == 0 %} {{ text['assistant']|safe }} {% else %}
+                  {{ text['assistant'] }} {% endif %}
                 </p>
               </div>
             </div>
