--- a/src/templates/history.html
+++ b/src/templates/history.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GPTSniffer</title>
+    <title>GPTScraper</title>
     <link rel="icon" type="image/svg+xml" href="assets/Group16.svg" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link
