--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -114,9 +114,9 @@
             />
             <img
               id="signup-eye-icon"
-              src="{{ url_for('static', filename='images/eye-solid.svg') }}"
-              data-src-eye="{{ url_for('static', filename='images/eye-solid.svg') }}"
-              data-src-slash="{{ url_for('static', filename='images/eye-slash-solid.svg') }}"
+              src="{{ url_for('static', filename='images/eye-slash-regular.svg') }}"
+              data-src-eye="{{ url_for('static', filename='images/eye-regular.svg') }}"
+              data-src-slash="{{ url_for('static', filename='images/eye-slash-regular.svg') }}"
               class="absolute right-3 top-1/2 transform -translate-y-1/2 w-4 h-4 md:w-5 md:h-5 opacity-100 cursor-pointer"
               alt="Eye Icon"
               onclick="toggleSignupPassword()"
